--- a/Sis457Licoreria/CpLicoreria/FrmProducto.resx
+++ b/Sis457Licoreria/CpLicoreria/FrmProducto.resx
@@ -129,4 +129,7 @@
   <metadata name="erpPrecio.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>330, 23</value>
   </metadata>
+  <metadata name="erpStock.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>467, 29</value>
+  </metadata>
 </root>
